Fix overflowing images.

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -50,6 +50,10 @@ input[type="submit"] {
      border-radius: 0px;
 }
 
+img {
+    max-width: calc(100vw - 50px);
+}
+
 .max-width-container {
     max-width: $base-max-width;
     padding: 0px 25px;
