--- a/scss/partials/_buttons.scss
+++ b/scss/partials/_buttons.scss
@@ -67,10 +67,10 @@
 
     .button {
         display: inline-block;
-        height: calc(25vw - 50px);
+        height: calc(25vw - 100px);
         min-height: 75px;
         max-height: 200px;        
-        width: calc(25vw - 50px);
+        width: calc(25vw - 100px);
         min-width: 75px;
         max-width: 200px;
         margin: 50px;
